welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:49: error: Unmatched closing brace '}' ignored here
}
^